added second input, added, acount model, repleced controller route Save-Profile,extended profile.xml, extended template

--- a/cartridges/app_custom_hw/cartridge/templates/resources/forms.properties
+++ b/cartridges/app_custom_hw/cartridge/templates/resources/forms.properties
@@ -187,4 +187,6 @@ example.phone=Example: 9234567890
 
 
 label.input.interests.profile=Interests
+label.input.residence.profile=Country of Residence
 error.message.100orless=Must be 100 characters or less.
+error.message.country.missing=Choose Country.
