make the authorization to be successful if the customer email is xxx@host.com

--- a/cartridges/app_custom_hw/cartridge/templates/resources/checkout.properties
+++ b/cartridges/app_custom_hw/cartridge/templates/resources/checkout.properties
@@ -76,3 +76,4 @@ heading.gift.message=Gift Message:
 
 label.credit.card-security.code=CVV
 error.message.security.code.required=CVV is required
+error.payment.wrong.email=Your email has to be xxx@host.com
