newsletter demo and practicingwitg getCustomObject and getAllCustomObjects

--- a/cartridges/app_custom_hw/cartridge/templates/resources/forms.properties
+++ b/cartridges/app_custom_hw/cartridge/templates/resources/forms.properties
@@ -190,3 +190,9 @@ label.input.interests.profile=Interests
 label.input.residence.profile=Country of Residence
 error.message.100orless=Must be 100 characters or less.
 error.message.country.missing=Choose Country.
+
+label.input.firstname.newsletter=Full Name
+label.input.skinType.newsletter=Skin Type
+label.input.email.newsletter=Email
+error.message.not.unique=Not unique email
+label.newsletter=Newsletter Form
