custom object HW, creating controller and template and xml to to store data passed from newsletter subscription form into Salesforce Commerce Cloud

--- a/cartridges/app_custom_hw/cartridge/templates/resources/forms.properties
+++ b/cartridges/app_custom_hw/cartridge/templates/resources/forms.properties
@@ -196,3 +196,8 @@ label.input.skinType.newsletter=Skin Type
 label.input.email.newsletter=Email
 error.message.not.unique=Not unique email
 label.newsletter=Newsletter Form
+
+label.input.email.subscribe= Email
+label.input.firstName.subscribe= First Name
+label.input.lastName.subscribe= Last Name
+label.input.gender.subscribe= Gender
